@@ -4,3 +4,4 @@
 build/*
 dist/*
 WIP/*
+docs/build/*
